adicionando reposividade mobile

--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ header{
   background-color: #FFD900;
   height: 80px;
   
+  
 }
 
 nav{
   padding: 20px 0px 10px 40px;
+  
   
 }
 main{
@@ -107,6 +109,89 @@ footer p {
 
 #button button:hover{
   color: #FFD900;
+}
+
+@media only screen and (max-width: 600px){
+  header{
+    text-align: center;
+    align-content: center;
+  }
+  nav{
+    padding: 0;
+  }
+  main{
+    display: grid;
+    grid-auto-flow: row; 
+  
+  }
+  h1{
+    font-size: 30px;
+  }
+  h2{
+    font-size: 18px;
+  }
+  #descritivo{
+    width: 100%;
+  }
+
+  #descritivo p {
+    font-size: 15px;
+  }
+  #segunda-coluna{
+
+    padding: 30px 0px 0px 0px ;
+    font-size: 12px;
+    text-align: center;
+
+  }
+  #count-down{
+    
+    font-size: 20px;
+    font-weight: 700;
+    color: #514988;
+    display: grid;
+    grid-auto-flow: column; 
+    
+  }
+  video{
+    width: 320px;
+    
+  }
+
+  #cards{
+    align-items: center;
+    display: grid;
+    grid-auto-flow: column; 
+    padding-left: 0px;
+    
+  }
+  .card{
+    width: 95px;
+    text-align: center;
+  }
+
+
+  #elementos{
+    text-align: center;
+    display: grid;
+    grid-auto-flow: row; 
+    
+  }
+  footer p{
+    font-size: 20px;
+    text-align: center;
+  }
+
+  #button {
+    text-align: center;
+  }
+  #button button{
+    font-size: 25px;
+    width: 250px;
+    margin-top: 50px;
+  }
+
+
 }
 
 
